basic working code

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-google-maps/api": "^2.20.7",
     "@tailwindcss/vite": "^4.1.17",
     "lucide-react": "^0.555.0",
+    "mapbox-gl": "^2.15.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwindcss": "^4.1.17"
